feat: action to check nx workspace affected apps

--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,23 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: "Nx Workspace Affected Apps"
+description: "Determines the affected apps in an Nx workspace (monorepo)"
 inputs:
-  myInput:              # change this
-    description: 'input description here'
-    default: 'default value if applicable'
+    base:
+        description: "SHA to compare to"
+        default: "origin/master~1"
+        required: false
+    head:
+        description: "SHA to compare from"
+        default: "origin/master"
+        required: false
+
+outputs:
+    affected_apps:
+        description: "an array of affected app names"
+
 runs:
-  using: 'node12'
-  main: 'dist/index.js'
+    using: "node12"
+    main: "dist/index.js"
+
+branding:
+    color: blue
+    icon: "filter"
