--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
 	"yaml.schemaStore.enable": true,
 	"yaml.schemas": {
 		"http://json.schemastore.org/github-action": "action.yml"
-	}
+	},
+	"editor.detectIndentation": false,
+	"editor.insertSpaces": false
 }
