--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@actions/core": "^1.2.0"
 	},
 	"devDependencies": {
+		"@nrwl/workspace": "^8.9.0",
 		"@types/jest": "^24.0.23",
 		"@types/node": "^12.7.12",
 		"@typescript-eslint/parser": "^2.8.0",
